Use OpenJFK from maven instead of Liberica full JDK, and personal libraries change:
- Use 'rulebook-ktlint'
- Update 'ktfx'